[project]
name = "neutts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa==0.11.0",
    "llama-cpp-python>=0.3.16",
    "neucodec>=0.0.4",
    "numpy==2.2.6",
    "onnxruntime>=1.23.2",
    "phonemizer==3.3.0",
    "resemble-perth==1.0.1",
    "soundfile==0.13.1",
    "torch==2.8.0",
    "transformers==4.56.1",
]
